[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-robot-stretch4-flying-gripper"
# Versioning follow CalVer (YYYY.MM.DD) for PEP 440 compliance
version = "2026.06.25"
description = "Inverse-kinematics (IK) based gamepad control of the Stretch 4 mobile manipulator's gripper"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "coal",
    "pin",
    "yourdfpy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stretch4_flying_gripper*"]
